공유 전체 조회 로직 추가